--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+
+
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
@@ -27,8 +29,8 @@
 <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
   <header class="clearfix">
       <div class="container">
-        {% include 'logo.html' %}
-        {% include 'social.html' %}
+        {% include 'components/logo.html' %}
+        {% include 'components/social.html' %}
         <nav class="clearfix">
           <ul role="navigation">
             <li>
@@ -113,7 +115,7 @@
 
         </article>
    </section>
-  {% include 'footer.html' %}
+  {% include 'components/footer.html' %}
   
   <script>window.jQuery || document.write('<script src="/framework/assets/js/jquery-3.3.1.min.js"><\/script>')</script>
   <script src="assets/js/script.js"></script>
