--- a/templates/components/logo.html
+++ b/templates/components/logo.html
@@ -1,1 +1,1 @@
-<a id="logo" href="{{url({app:'simple_pages',alias:'alias_index'})}}">&micro;{{settings.site | raw }}</a>
+<a id="logo" href="{{url({app:'simple_pages',alias:'alias_index'})}}"><img class="mb-4" src="/framework/assets/images/icon.svg" alt="" width="72" height="72">{{settings.site | raw }}</a>
