--- a/templates/apps/auth/login.html
+++ b/templates/apps/auth/login.html
@@ -1,24 +1,59 @@
-{% extends 'base.html' %}
-{% block title %} Авторизация {% endblock %}
-{% block bannerh1 %} Вход  {% endblock %}
-{% block bannerh2 %}   {% endblock %}
-{% block pagename %}Авторизация {% endblock %}
-{% block lact %}class=activePage{% endblock %}
-{% block content %}
 
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+   
+    <link rel="icon" href="/framework/assets/images/icon.ico">
 
+    <title>Авторизация</title>
 
-{% if user.login|length == 0 %}
- <form class="c-form" method='post' action="{{ url({alias:'alias_login'}) }}">
-     <h2>Авторизация</h2>
-     <input type="text" pattern='[0-9A-Za-z]{5,32}' placeholder="Логин" name=login id="login" required>
-     <input type="password" pattern='[0-9A-Za-z]{6,32}'  placeholder="Пароль" name=pass id="password" required>
-     <input type="submit" name=log value="Войти" class="button green">
- </form>
- <p>Еще не зарегистрированы? <a href="{{ url({alias:'alias_register'}) }}">Зарегистрироваться!</a>   </p> 
-{% else %}
-<p>Авторизация не требуется, вы авторизованны</p> 
+  {% for style in settings.styles %}
+  <link rel=stylesheet href='{{style}}'>
+  {% endfor %}
+  </head>
+
+  <body class="c">
+
+{% if message.text != '' %}
+<div class="container alert-dismissible fade show fixed-top alert {{message.type}}" role="alert" >
+{{message.text}}
+
+{% if message.link != '' %} - 
+<a class="alert-link" href="{{ url({ alias:message.alias }) }}">{{message.link}}</a>{% endif %}
+<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
 {% endif %}
- 
 
-{% endblock %}
+    <form class="form-signin" method="post" action="{{ url({alias:'alias_login'}) }}">
+      <div class="text-center mb-4">
+        <img class="mb-4" src="/framework/assets/images/icon.svg" alt="" width="72" height="72">
+        <h1 class="h3 mb-3 font-weight-normal">Авторизация</h1>
+      </div>
+
+      <div class="form-label-group">
+        <input type="text" id="inputLogin" class="form-control" placeholder="Email address" name='login' required autofocus>
+        <label for="inputLogin">Логин</label>
+      </div>
+
+      <div class="form-label-group">
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" name="pass" required>
+        <label for="inputPassword">Пароль</label>
+      </div>
+
+      <!--<div class="checkbox mb-3">
+        <label>
+          <input type="checkbox" name=rem value="remember-me"> Remember me()
+        </label>
+      </div>-->
+      <button class="btn btn-lg btn-primary btn-block" name='log' type="submit">Войти</button>
+      <p class="mt-5 mb-3 text-muted text-center">&copy; 2017-2018</p>
+    </form>
+    <script>window.jQuery || document.write('<script src="/framework/assets/js/jquery-3.3.1.min.js"><\/script>')</script>
+{% for script in settings.scripts %}
+<script src="{{script}}"></script>
+{% endfor %}
+  </body>
+</html>
