--- a/templates/apps/auth/main.html
+++ b/templates/apps/auth/main.html
@@ -16,7 +16,7 @@
 
 
 {% if message.text|length == 0 %}
-<img src="{{ profile.avatar }}" alt="Gravatar">
+<img class="avatar" src="{{ profile.avatar }}" alt="Gravatar">
 <h3>Логин: <a href="{{ url({alias:'alias_prof',login:profile.login,id:profile.id}) }}">{{ profile.login }}</a></h3>
 {% else %}
 {% endif %}
